fixed button issues, working on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -161,9 +161,11 @@ p {
   margin: 0 auto;
 }
 .main-navigation {
-  background: #F1F1F1;
+  background-color: #F6F6F6;
+  color: #454A59;
   display: flex;
   justify-content: center;
+  border: 1px solid #F1F1F1;
 }
 .main-navigation nav {
   display: flex;
@@ -202,53 +204,89 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.home .intro h2 {
+@media (max-width: 500px) {
+  .home {
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+.intro h2 {
   padding: 15px;
 }
-.home .intro p {
+.intro p {
   padding: 0 15px;
 }
-.home .space-images {
+@media (max-width: 500px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
-.home .space-images img {
+@media (max-width: 500px) {
+  .space-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
-.home .visit-planets {
+@media (max-width: 500px) {
+  .space-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.visit-planets {
   padding: 15px;
 }
-.home .visit-planets h3 {
+.visit-planets h3 {
   margin-top: 11px;
 }
-.home .visit-planets p {
+.visit-planets p {
   margin-top: 13px;
 }
-.home .walk {
+.walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
   justify-content: center;
 }
-.home .walk .walk-text {
+.walk .walk-text {
   width: 50%;
 }
-.home .walk .walk-text h3 {
+.walk .walk-text h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+.walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-img {
+.walk .walk-text .signup-btn {
+  background-color: #22283A;
+  color: #F6F7F8;
+  font-size: 2rem;
+  border-radius: 10%;
+  padding: 1% 4%;
+  border: none;
+}
+.walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+.walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
