--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,13 +1,11 @@
 // Mixins Here
 
 
-.button-decoration (@bgcolor, @text-color) {
+.button-decoration (@bgcolor, @text-color, @btn-font-size, @btn-radius) {
     background-color: @bgcolor;
     color: @text-color;
-    border-radius: @radius;
-    text-align: @text-align;
-    font-size: @font-size;
-    padding: @padding;
+    font-size: @btn-font-size;
+    border-radius: @btn-radius
   }
 
 
