--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
 // Variables
+@btn-size: 2rem;
 
 // Color pointers
 @nav-bg: @wild-sand;
